--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,9 @@ body {
   }
   .card {
     display: inline-block;
-    margin: 5px;
-    height: calc(200px - 10px);
-    width: calc(250px - 10px);
+    margin: 6px;
+    height: calc(100px - 10px);
+    width: calc(160px - 10px);
     cursor: pointer;
   
   
@@ -35,8 +35,8 @@ body {
   
   }
   .card-image {
-    height: calc(200px - 10px);
-    width: calc(250px - 10px);
+    height: calc(120px - 9px);
+    width: calc(160px - 9px);
   
   }
 
@@ -55,16 +55,18 @@ body {
   
   
     .cards-container {
-      width: 350px;
-      height: 750px;
+      width: 360px;
+      height: 665px;
       border: 1px solid purple;
+     
     }
     .card {
       display: inline-block;
-      margin: 5px;
-      height: calc(100px - 10px);
-      width: calc(100px - 10px);
+      margin: 0.9px;
+      height: calc(70px - 6px);
+      width: calc(70px - 6px);
       cursor: pointer;
+      padding: 1.5px;
     
     
     }
@@ -73,8 +75,8 @@ body {
     
     }
     .card-image {
-      height: calc(120px - 10px);
-      width: calc(120px - 10px);
+      height: calc(85px - 6px);
+      width: calc(85px - 6px);
     
     }
     .brianni {
